feat: se añadieron las cards queda pendiente terminar de revisar los estilos en cuanto a colores

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -78,6 +78,13 @@ section{
     width: 12rem;
 }
 
+.tarjeta{
+    padding: 1rem;
+    color: var(--color-100);
+    background-color: var(--color-700);
+}
+
 .xp h3{
     font-size: 24px;
 }
+
