--- a/css/index_style.css
+++ b/css/index_style.css
@@ -88,24 +88,9 @@ section{
     font-size: 24px;
 }
 
-.sub-tecno{
-    margin: 16px;
-}
 
-.badge-custom-python {
-    background-color: red;
+.badge-custom{
+    /*background-color: red;*/
     color:white;
-    border: 1px solid var(--badge-python-border); /* Ajusta el grosor si quieres */
-}
-
-.badge-custom-html {
-    background-color: green;
-    color: white;
-    border: 1px solid var(--badge-html-border);
-}
-
-.badge-custom-css {
-    background-color: blue;
-    color: white;
-    border: 1px solid var(--badge-green-border);
+    border: 1px solid white; /* Ajusta el grosor si quieres */
 }
