feat: se añadio la seccion de sistemas operativos

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -94,3 +94,9 @@ section{
     color:white;
     border: 1px solid white; /* Ajusta el grosor si quieres */
 }
+
+.soft{
+    font-size: 24px;
+}
+
+
