--- a/css/index_style.css
+++ b/css/index_style.css
@@ -22,6 +22,7 @@
     color: var(--color-50);
 }
 
+
 .oxygen-light {
     font-family: "Oxygen", sans-serif;
     font-weight: 300;
@@ -39,6 +40,7 @@
     font-weight: 700;
     font-style: bold;
 }
+
   
 body {
     background-color: var(--color-950);
@@ -49,6 +51,10 @@ section{
     margin: auto;
     align-items: center;
     padding: 20px;
+}
+
+a{
+    text-decoration: none;
 }
 
 .title{
@@ -83,6 +89,7 @@ section{
     color: var(--color-100);
     background-color: var(--color-700);
 }
+
 
 .xp h3{
     font-size: 24px;
